ncc/testsuite/positive/Issue-git-0572-lib.n
using System.Runtime.CompilerServices; 

[assembly: InternalsVisibleTo("Issue-git-0572")] 

namespace ClassLibrary1
{
  public abstract class Base
  {
      internal abstract Test() : string;
  }
}
