ncc/testsuite/negative/external-extensions-lib1.n
using SAT = System.AttributeTargets;

namespace System.Runtime.CompilerServices
{
 [System.AttributeUsage (SAT.Class | SAT.Method)]
 public class ExtensionAttribute : Attribute
 {
 }
}
